--- a/css/general.css
+++ b/css/general.css
@@ -252,7 +252,7 @@ color: #ECEBEB;
 }
 
 .intro-message {
-	font-family: "Helvetica Neue", Helvetica, Arial, "微軟正黑體", "微软雅黑", "メイリオ", "맑은 고딕", sans-serif
+	font-family: "微軟正黑體", "微软雅黑", "メイリオ", "맑은 고딕", "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	position: relative;
 	padding-top: 12%;
 	padding-bottom: 20%;
@@ -278,7 +278,7 @@ color: #ECEBEB;
 .intro-message > h3 {
 	margin: 0;
 	font-size: 2.8em;
-	font-family: "Helvetica Neue", Helvetica, Arial, "微軟正黑體", "微软雅黑", "メイリオ", "맑은 고딕", sans-serif, "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: "微軟正黑體", "微软雅黑", "メイリオ", "맑은 고딕", "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-weight: 300;
 	letter-spacing: 0px;
 	margin-top: 10px;
