--- a/css/general.css
+++ b/css/general.css
@@ -252,11 +252,7 @@ color: #ECEBEB;
 }
 
 .intro-message {
-<<<<<<< HEAD
-	font-family: "微軟正黑體", "微软雅黑", "メイリオ", "맑은 고딕","Helvetica Neue", Helvetica, Arial, sans-serif
-=======
-	font-family: "Helvetica Neue", Helvetica, Arial, "微軟正黑體", "微软雅黑", "メイリオ", "맑은 고딕", sans-serif
->>>>>>> parent of 8c95d77... test css
+	font-family: "微軟正黑體", "微软雅黑", "メイリオ", "맑은 고딕","Helvetica Neue", Helvetica, Arial, sans-serif;
 	position: relative;
 	padding-top: 12%;
 	padding-bottom: 20%;
@@ -268,7 +264,7 @@ color: #ECEBEB;
 .intro-message > h1 {
 	margin: 0;
 	font-size: 5em;
-	font-family:  "微软雅黑", "メイリオ", "맑은 고딕","Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family:  "微軟正黑體", "微软雅黑", "メイリオ", "맑은 고딕","Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-weight: 400;
 	letter-spacing: 3px;
 }
@@ -282,7 +278,7 @@ color: #ECEBEB;
 .intro-message > h3 {
 	margin: 0;
 	font-size: 2.8em;
-	font-family: "Helvetica Neue", Helvetica, Arial, "微軟正黑體", "微软雅黑", "メイリオ", "맑은 고딕", sans-serif, "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: "微軟正黑體", "微软雅黑", "メイリオ", "맑은 고딕", sans-serif, "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-weight: 300;
 	letter-spacing: 0px;
 	margin-top: 10px;
